unpackaged/main/default/objects/Account/fields/Business_Model_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Model_Account__c</fullName>
    <description>Decision pending on keeping this field.</description>
    <label>Business Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner - Self Perform</fullName>
            </value>
            <value>
                <fullName>Owner - Managing Partner</fullName>
            </value>
            <value>
                <fullName>Owner - Passive Partner</fullName>
            </value>
            <value>
                <fullName>Independent Service Provider (ISP)</fullName>
            </value>
            <value>
                <fullName>Utility - Regulated</fullName>
            </value>
            <value>
                <fullName>Utility - Unregulated</fullName>
            </value>
            <value>
                <fullName>Utility - T&amp;D</fullName>
            </value>
            <value>
                <fullName>Utility - Retail</fullName>
            </value>
            <value>
                <fullName>Development, Construction &amp; Design Engineering</fullName>
            </value>
            <value>
                <fullName>OEM, System Integrator &amp; Technology Service Provider</fullName>
            </value>
            <value>
                <fullName>Education, Media, Investor &amp; Misc Consultant</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>