unpackaged/main/default/objects/Account/fields/Merged_Account__c.field-meta.xml
<CustomField>
    <fullName>Merged_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To be Merged</label>
    <type>Checkbox</type>
</CustomField>