unpackaged/main/default/objects/Account/fields/number_of_opportuninties__c.field-meta.xml
<CustomField>
    <fullName>number_of_opportuninties__c</fullName>
    <label>number of opportuninties</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>00 - MQL, 0 - Identified Prospect Account, 1 - Account Exploration, 2 - Account Qualification</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>