unpackaged/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Africa &amp; MENA (Middle East North Africa)</fullName>
            </value>
            <value>
                <fullName>Oceania (Australia, New Zealand)</fullName>
            </value>
            <value>
                <fullName>ASEAN</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Japan/Korea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>