unpackaged/main/default/objects/Account/recordTypes/Prospect.recordType-meta.xml
<RecordType>
    <fullName>Prospect</fullName>
    <active>true</active>
    <label>Prospect</label>
    
        
        
        
        
</RecordType>