unpackaged/main/default/objects/Account/validationRules/parent_account_required.validationRule-meta.xml
<ValidationRule>
    <fullName>parent_account_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL( Account_Status__c , &#39;approved&#39;),   
ISPICKVAL( Legal_Entity__c , &#39;Yes&#39;),

 ISBLANK( ParentId )  


)</errorConditionFormula>
    <errorDisplayField>Legal_Entity__c</errorDisplayField>
    <errorMessage>Please update parent account</errorMessage>
</ValidationRule>