unpackaged/main/default/objects/Account/listViews/Draft_Accounts_with_Opportunities.listView-meta.xml
<ListView>
    <fullName>Draft_Accounts_with_Opportunities</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>number_of_opportuninties__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Account_Status__c</field>
        <operation>equals</operation>
        <value>Unapproved</value>
    </filters>
    <label>Draft Accounts with Opportunities</label>
</ListView>