unpackaged/main/default/objects/Account/listViews/Merge_Accounts.listView-meta.xml
<ListView>
    <fullName>Merge_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Request_Note__c</columns>
    <columns>Merge_into_del__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Merged_Account__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>To Be Merged Account</label>
</ListView>